--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: my-express.application
+service: express-app
 
 provider:
   name: aws
@@ -8,7 +8,7 @@ provider:
 
 functions:
   app:
-    handler: index.handler
+    handler: app.handler
     events:
       - http: ANY /
       - http: 'ANY {proxy+}'
